tests/ui/traits/default-method/rustc_must_implement_one_of_gated.stderr
error[E0658]: use of an internal attribute
  --> $DIR/rustc_must_implement_one_of_gated.rs:1:1
   |
LL | #[rustc_must_implement_one_of(eq, neq)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: the `#[rustc_must_implement_one_of]` attribute is an internal implementation detail that will never be stable
   = note: the `#[rustc_must_implement_one_of]` attribute is used to change minimal complete definition of a trait. Its syntax and semantics are highly experimental and will be subject to change before stabilization

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
